small changes to the image

--- a/args.conf
+++ b/args.conf
@@ -1,4 +1,4 @@
---output "/download/%(uploader)s/%(title)s.%(ext)s"
+--output "/downloads/%(uploader)s/%(title)s.%(ext)s"
 --download-archive /config/archive.txt
 --batch-file /config/channels.txt
 --merge-output-format mp4
