--- a/args.conf
+++ b/args.conf
@@ -1,16 +1,36 @@
+### youtube-dl configuration options: https://github.com/ytdl-org/youtube-dl/blob/master/README.md#options
+## args
 --output "/downloads/%(uploader)s/%(title)s.%(ext)s"
 --download-archive /config/archive.txt
---batch-file /config/channels.txt
---merge-output-format mp4
---dateafter now-365days
---playlist-end 16
---ignore-errors
---no-progress
---no-cache-dir
---write-sub
---convert-subs srt
---embed-subs
---add-metadata
---embed-thumbnail
---playlist-reverse
+
+## Geo Restriction
 --geo-bypass
+
+## Video Selection
+--playlist-end 16
+--dateafter now-365days
+
+## Download Options
+--abort-on-unavailable-fragment
+--playlist-reverse
+
+## Filesystem Options
+--no-continue
+--no-cache-dir
+
+## Verbosity / Simulation Options
+--no-progress
+--ignore-errors
+
+## Video Format Options
+--merge-output-format mp4
+
+## Subtitle Options
+--write-sub
+--sub-format srt
+
+## Post-processing Options
+--embed-subs
+--embed-thumbnail
+--add-metadata
+--convert-subs srt
