--- a/args.conf
+++ b/args.conf
@@ -14,6 +14,7 @@
 
 ## Filesystem Options
 --no-continue
+--no-part
 --no-cache-dir
 
 ## Verbosity / Simulation Options
@@ -25,7 +26,6 @@
 
 ## Subtitle Options
 --write-sub
---sub-format srt
 
 ## Post-processing Options
 --embed-subs
