--- a/args.conf
+++ b/args.conf
@@ -1,14 +1,12 @@
 ### youtube-dl configuration options: https://github.com/ytdl-org/youtube-dl/blob/master/README.md#options
 ## args
 --output "/downloads/%(uploader)s/%(title)s.%(ext)s"
---download-archive /config/archive.txt
 
 ## Geo Restriction
 --geo-bypass
 
 ## Video Selection
 --playlist-end 16
---dateafter now-365days
 
 ## Download Options
 --abort-on-unavailable-fragment
@@ -16,6 +14,7 @@
 
 ## Filesystem Options
 --no-continue
+--no-part
 --no-cache-dir
 
 ## Verbosity / Simulation Options
@@ -27,7 +26,6 @@
 
 ## Subtitle Options
 --write-sub
---sub-format srt
 
 ## Post-processing Options
 --embed-subs
