small changes to arguments and help text.

--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -1,4 +1,6 @@
-### youtube-dl configuration options: https://github.com/ytdl-org/youtube-dl/blob/master/README.md#options
+### This is where all youtube-dl execution options are entered. it is totally OK to leave default.
+### Check the github for help if needed: https://github.com/Jeeaaasus/youtube-dl/blob/master/README.md#configure-youtube-dl
+
 ## args
 --output "/downloads/%(uploader)s/%(title)s.%(ext)s"
 
@@ -6,14 +8,14 @@
 --geo-bypass
 
 ## Video Selection
---playlist-end 4
+--playlist-end 8
 
 ## Download Options
 --abort-on-unavailable-fragment
 --playlist-reverse
 
 ## Filesystem Options
---no-continue
+--no-part
 --no-cache-dir
 
 ## Verbosity / Simulation Options
