--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -3,11 +3,12 @@ name: Push Image
 on:
   push:
     branches:
-      - master
+      - beta
   pull_request:
+    branches: beta
 
-  schedule:
-    - cron: '0 15 * * *'
+#  schedule:
+#    - cron: '0 12 * * *'
 
 env:
   IMAGE_REPO: jeeaaasustest
@@ -26,7 +27,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: $IMAGE_REPO
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
