--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -18,19 +18,20 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up QEMU
+      - 
+        name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-
-      - name: Setup Docker Buildx
+      - 
+        name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
+      - 
+        name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
