--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -10,30 +10,28 @@ on:
 #  schedule:
 #    - cron: '0 12 * * *'
 
-env:
-  IMAGE_REPO: jeeaaasustest
-  IMAGE_NAME: youtube-dl
-
 jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      - 
-        name: Setup Docker Buildx
+
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Build and push
+
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
+        env:
+          IMAGE_REPO: jeeaaasustest
+          IMAGE_NAME: youtube-dl
         with:
           push: true
           tags: ${IMAGE_REPO}/${IMAGE_NAME}:beta
