--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -10,6 +10,10 @@ on:
 #  schedule:
 #    - cron: '0 12 * * *'
 
+env:
+  IMAGE_REPO: jeeaaasustest
+  IMAGE_NAME: youtube-dl
+
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -29,9 +33,6 @@ jobs:
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
-        env:
-          IMAGE_REPO: jeeaaasustest
-          IMAGE_NAME: youtube-dl
         with:
           push: true
-          tags: jeeaaasustest/youtube-dl:beta
+          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
