--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
     branches: master
 
-#  schedule:
-#    - cron: '0 12 * * *'
+  schedule:
+    - cron: '0 12 * * *'
 
 env:
   IMAGE_REPO: jeeaaasustest
@@ -35,4 +35,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
+          tags: |
+            - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
+            - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:$(echo date +%Y%m%d)
