--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -37,4 +37,4 @@ jobs:
           push: true
           tags: |
             - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
-            - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:$(echo date +%Y%m%d)
+            - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:20201214
