--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -36,5 +36,5 @@ jobs:
         with:
           push: true
           tags: |
-            - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
-            - ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:20201214
+            ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
+            ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:$(echo date +%Y%m%d)
