--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -31,6 +31,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Set Tags
+        id: docker_tag
+        run: echo "DATE_TAG=$(date +%Y.%m.%d)" >> $GITHUB_ENV
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
