--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -2,7 +2,7 @@ name: Push Image
 
 on:
   schedule:
-    - cron: '0 12 * * *'
+    - cron: '0 12 * * 1'
 
   push:
     branches:
@@ -34,7 +34,7 @@ jobs:
         id: image_tags
         run: echo "DATE_TAG=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
-      - name: Build and push
+      - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
@@ -42,3 +42,6 @@ jobs:
           tags: |
             ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.DATE_TAG }}
             ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
+
+      - name: Build Digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
