--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -2,7 +2,7 @@ name: Push Image
 
 on:
   schedule:
-    - cron: '0 12 * * 1'
+    - cron: '0 12 * * *'
 
   push:
     branches:
@@ -24,15 +24,17 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Set Tags
+        id: image_tags
+        run: |
+          echo "VERSION_TAG=$(echo $(curl https://github.com/ytdl-org/youtube-dl/releases/latest) | sed -E 's!(.*/youtube-dl/releases/tag/)(.*)(">.*)!\2!i')" >> $GITHUB_ENV
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2==${{ env.VERSION_TAG }}!i' ./Dockerfile
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Set Tags
-        id: image_tags
-        run: echo "DATE_TAG=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
       - name: Build and Push
         id: docker_build
@@ -40,8 +42,5 @@ jobs:
         with:
           push: true
           tags: |
-            ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.DATE_TAG }}
+            ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
             ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
-
-      - name: Build Digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
