--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -18,16 +18,20 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Set Tags
-        id: image_tags
+      - name: Set Version and Tag
+        id: image_tag
         run: |
           echo "VERSION_TAG=$(echo $(curl https://github.com/ytdl-org/youtube-dl/releases/latest) | sed -E 's!(.*/youtube-dl/releases/tag/)(.*)(">.*)!\2!i')" >> $GITHUB_ENV
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2==${{ env.VERSION_TAG }}!i' ./Dockerfile
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -39,6 +43,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
           push: true
           tags: |
             ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
