--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -31,7 +31,9 @@ jobs:
         id: image_tag
         run: |
           echo "VERSION_TAG=$(echo $(curl https://github.com/ytdl-org/youtube-dl/releases/latest) | sed -E 's!(.*/youtube-dl/releases/tag/)(.*)(">.*)!\2!i')" >> $GITHUB_ENV
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"${{ env.VERSION_TAG }}"'!i' ./Dockerfile
+          echo ${{ env.VERSION_TAG }}
+          VERSION_TAG=${{ env.VERSION_TAG }}
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
