--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -31,13 +31,13 @@ jobs:
         id: image_version
         run: |
           echo "VERSION_TAG=$(echo $(curl https://github.com/ytdl-org/youtube-dl/releases/latest) | sed -E 's!(.*/youtube-dl/releases/tag/)(.*)(">.*)!\2!i')" >> $GITHUB_ENV
+          echo "Version: ${{ env.VERSION_TAG }}"
 
-      - name: Set Tag
-        id: image_tag
+      - name: Set Version
+        id: image_youtube-dl_version
         run: |
-          echo ${{ env.VERSION_TAG }}
-          VERSION_TAG=${{ env.VERSION_TAG }}
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
+          echo "Version: ${{ env.VERSION_TAG }}"
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"${{ env.VERSION_TAG }}"'!i' ./Dockerfile
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
