--- a/.github/workflows/push-image.yml
+++ b/.github/workflows/push-image.yml
@@ -30,14 +30,10 @@ jobs:
       - name: Get Version
         id: image_version
         run: |
-          echo "VERSION_TAG=$(echo $(curl https://github.com/ytdl-org/youtube-dl/releases/latest) | sed -E 's!(.*/youtube-dl/releases/tag/)(.*)(">.*)!\2!i')" >> $GITHUB_ENV
-          echo "Version: ${{ env.VERSION_TAG }}"
-
-      - name: Set Version
-        id: image_youtube-dl_version
-        run: |
-          echo "Version: ${{ env.VERSION_TAG }}"
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"${{ env.VERSION_TAG }}"'!i' ./Dockerfile
+          VERSION_TAG=$(echo $(curl https://github.com/ytdl-org/youtube-dl/releases/latest) | sed -E 's!(.*/youtube-dl/releases/tag/)(.*)(">.*)!\2!i')
+          echo "Version: $VERSION_TAG"
+          echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
