--- a/.github/workflows/push-version-image.yml
+++ b/.github/workflows/push-version-image.yml
@@ -28,6 +28,7 @@ jobs:
           echo "Version: $VERSION_TAG"
           echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
           sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
+          rm ./root/app/youtube-dl/updater.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -43,4 +44,3 @@ jobs:
           push: true
           tags: |
             ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.VERSION_TAG }}
-            ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:beta
