--- a/.github/workflows/push-version-image.yml
+++ b/.github/workflows/push-version-image.yml
@@ -22,13 +22,15 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Get Version
+      - name: Configure Version
         run: |
           VERSION_TAG=$(cat ./release-versions/latest.txt)
           echo "Version: $VERSION_TAG"
           echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
           sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
-          rm ./root/app/youtube-dl/updater.sh
+
+      - name: Remove Updater
+        run: rm --verbose ./root/app/youtube-dl/updater.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
