--- a/.github/workflows/push-version-image.yml
+++ b/.github/workflows/push-version-image.yml
@@ -22,27 +22,26 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Configure Version
+      - name: Configure version
         run: |
           VERSION_TAG=$(cat ./release-versions/latest.txt)
           echo "Version: $VERSION_TAG"
           echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
           sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
 
-      - name: Remove Updater
+      - name: Remove updater
         run: rm --verbose ./root/app/youtube-dl/updater.sh
 
-      - name: Login to Docker Hub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.VERSION_TAG }}
+          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.VERSION_TAG }}
