--- a/.github/workflows/release-checker.yml
+++ b/.github/workflows/release-checker.yml
@@ -5,7 +5,7 @@ on:
     - cron: '0 0,12 * * *'
 
 jobs:
-  Release Checker:
+  Release-Checker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
