--- a/.github/workflows/push-static-version-image.yml
+++ b/.github/workflows/push-static-version-image.yml
@@ -10,7 +10,7 @@ env:
   IMAGE_NAME: youtube-dl
 
 jobs:
-  Push New Static Version Image:
+  Push-New-Static-Version-Image:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
