--- a/.github/workflows/push-new-image.yml
+++ b/.github/workflows/push-new-image.yml
@@ -17,15 +17,15 @@ jobs:
         run: |
           if echo "$CI_ACTION_REF_NAME_SLUG" == 'master'
           then
-            echo "BRANCH=latest" >> $GITHUB_ENV
+            echo "TAG=latest" >> $GITHUB_ENV
           else
-            echo "BRANCH=$CI_ACTION_REF_NAME_SLUG" >> $GITHUB_ENV
+            echo "TAG=$CI_ACTION_REF_NAME_SLUG" >> $GITHUB_ENV
           fi
 
       - name: Print image tag
         run: |
           echo "Branch: $CI_ACTION_REF_NAME_SLUG"
-          echo "Image Tag: ${{ env.BRANCH }}"
+          echo "Image Tag: ${{ env.TAG }}"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
