--- a/.github/workflows/push-static-version-image.yml
+++ b/.github/workflows/push-static-version-image.yml
@@ -24,13 +24,13 @@ jobs:
 
       - name: Configure version
         run: |
-          VERSION_TAG=$(cat ./release-versions/latest.txt)
+          VERSION_TAG=$(cat release-versions/latest.txt)
           echo "Version: $VERSION_TAG"
           echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' ./Dockerfile
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' Dockerfile
 
       - name: Remove updater
-        run: rm --verbose -r ./root/etc/services.d/updater/
+        run: rm --verbose -r root/etc/services.d/updater/
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
