--- a/.github/workflows/push-release-version-image.yml
+++ b/.github/workflows/push-release-version-image.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - 'release-versions/latest.txt'
+    branches:
+      - 'master'
 
 env:
   IMAGE_REPO: jeeaaasustest
