--- a/.github/workflows/push-new-image.yml
+++ b/.github/workflows/push-new-image.yml
@@ -17,16 +17,16 @@ jobs:
         run: |
           if echo "$CI_ACTION_REF_NAME_SLUG" == 'master'
           then
-            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
+            echo "IMAGE_TAGS=latest" >> $GITHUB_ENV
           else
-            echo "IMAGE_TAG=$CI_ACTION_REF_NAME_SLUG" >> $GITHUB_ENV
+            echo "IMAGE_TAGS=$CI_ACTION_REF_NAME_SLUG" >> $GITHUB_ENV
           fi
-          echo "IMAGE_TAG=$CI_ACTION_REF_NAME_SLUG"
+          echo "IMAGE_TAGS=$CI_ACTION_REF_NAME_SLUG"
 
       - name: Print image tag
         run: |
           echo "Branch: $CI_ACTION_REF_NAME_SLUG"
-          echo "Image Tag: ${{ env.IMAGE_TAG }}"
+          echo "Image Tag: ${{ env.IMAGE_TAGS }}"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
