--- a/.github/workflows/push-new-image.yml
+++ b/.github/workflows/push-new-image.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Set tag
         run: |
-          if [ $(echo "$CI_ACTION_REF_NAME_SLUG") == 'master' ]
+          if [ "$CI_ACTION_REF_NAME_SLUG" == 'master' ]
           then
             echo "IMAGE_TAG=latest" >> $GITHUB_ENV
           else
