--- a/.github/workflows/push-release-version-image.yml
+++ b/.github/workflows/push-release-version-image.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Configure version
+      - name: Configure tag and version
         run: |
-          VERSION_TAG=$(cat release-versions/latest.txt)
-          echo "Version: $VERSION_TAG"
-          echo "VERSION_TAG=$VERSION_TAG" >> $GITHUB_ENV
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$VERSION_TAG"'!i' Dockerfile
+          IMAGE_TAG=$(cat release-versions/latest.txt)
+          echo "Version: $IMAGE_TAG"
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$IMAGE_TAG"'!i' Dockerfile
 
       - name: Remove updater
         run: rm --verbose -r root/etc/services.d/updater/
@@ -46,4 +46,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.VERSION_TAG }}
+          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.IMAGE_TAG }}
