--- a/.github/workflows/push-release-version-image.yml
+++ b/.github/workflows/push-release-version-image.yml
@@ -24,12 +24,20 @@ jobs:
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Configure tag and version
+      - name: Set tag
         run: |
           IMAGE_TAG=$(cat release-versions/latest.txt)
-          echo "Version: $IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$IMAGE_TAG"'!i' Dockerfile
+
+      - name: Set version
+        run: |
+          RELEASE_VERSION=$(cat release-versions/latest.txt)
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$RELEASE_VERSION"'!i' Dockerfile
+
+      - name: Print image tag
+        run: |
+          echo "Branch: $CI_ACTION_REF_NAME"
+          echo "Image Tag: ${{ env.IMAGE_TAG }}"
 
       - name: Remove updater
         run: rm --verbose -r root/etc/services.d/updater/
