--- a/.github/workflows/push-new-image.yml
+++ b/.github/workflows/push-new-image.yml
@@ -3,8 +3,8 @@ name: Push New Image
 on:
   push:
     paths-ignore:
+      - '.*/**'
       - 'README.md'
-      - '.**'
 
 env:
   IMAGE_REPO: jeeaaasustest
@@ -14,6 +14,15 @@ jobs:
   Push-New-Image:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Get environment variables
         uses: FranzDiebold/github-env-vars-action@v2
 
@@ -26,16 +35,15 @@ jobs:
             echo "IMAGE_TAG=$CI_ACTION_REF_NAME_SLUG" >> $GITHUB_ENV
           fi
 
+      - name: Set version
+        run: |
+          RELEASE_VERSION=$(cat release-versions/latest.txt)
+          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$RELEASE_VERSION"'!i' Dockerfile
+
       - name: Print image tag
         run: |
           echo "Branch: $CI_ACTION_REF_NAME"
           echo "Image Tag: ${{ env.IMAGE_TAG }}"
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -46,5 +54,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
