--- a/.github/workflows/push-new-image.yml
+++ b/.github/workflows/push-new-image.yml
@@ -8,7 +8,7 @@ on:
       - 'README.md'
 
 env:
-  IMAGE_REPO: wesdobry
+  IMAGE_REPO: jeeaaasustest
   IMAGE_NAME: youtube-dl
 
 jobs:
@@ -57,6 +57,5 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
