--- a/.github/workflows/push-release-version-image.yml
+++ b/.github/workflows/push-release-version-image.yml
@@ -54,5 +54,6 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.IMAGE_TAG }}
