--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -27,10 +27,10 @@
 --merge-output-format mp4
 
 ## Subtitle Options
---write-sub
+--sub-langs all,-live_chat
 
 ## Post-processing Options
 --embed-subs
 --embed-thumbnail
---add-metadata
+--embed-metadata
 --convert-subs srt
