--- a/.github/workflows/push-new-image.yml
+++ b/.github/workflows/push-new-image.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Set version
         run: |
           RELEASE_VERSION=$(cat release-versions/latest.txt)
-          sed -i -E 's!(python.*install.*)(youtube_dl)!\1\2=='"$RELEASE_VERSION"'!i' Dockerfile
+          sed -i -E 's!(wget\ https:\/\/github\.com\/yt-dlp\/yt-dlp\/releases\/)(latest\/download)(\/yt-dlp)!\1download/'"$RELEASE_VERSION"'\3!i' Dockerfile
 
       - name: Print image tag
         run: |
