--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -18,6 +18,7 @@
 ## Filesystem Options
 --windows-filenames
 --no-part
+--no-write-playlist-metafiles
 --no-cache-dir
 
 ## Verbosity / Simulation Options
