Update Dockerfile, latest.txt, args.conf

--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -23,7 +23,6 @@
 
 ## Verbosity / Simulation Options
 --no-progress
---ignore-errors
 
 ## Video Format Options
 --merge-output-format mp4
@@ -31,8 +30,11 @@
 ## Subtitle Options
 --sub-langs all,-live_chat
 
-## Post-processing Options
+## Post-Processing Options
 --embed-subs
 --embed-thumbnail
 --embed-metadata
 --convert-subs srt
+
+## SponsorBlock Options
+--sponsorblock-mark all
