--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -16,21 +16,25 @@
 --playlist-reverse
 
 ## Filesystem Options
+--windows-filenames
 --no-part
+--no-write-playlist-metafiles
 --no-cache-dir
 
 ## Verbosity / Simulation Options
 --no-progress
---ignore-errors
 
 ## Video Format Options
 --merge-output-format mp4
 
 ## Subtitle Options
---write-sub
+--sub-langs all,-live_chat
 
-## Post-processing Options
+## Post-Processing Options
 --embed-subs
 --embed-thumbnail
---add-metadata
+--embed-metadata
 --convert-subs srt
+
+## SponsorBlock Options
+--sponsorblock-mark all
