--- a/.github/workflows/push-latest-image.yml
+++ b/.github/workflows/push-latest-image.yml
@@ -1,9 +1,9 @@
-name: Push New Release Version Image
+name: Push New Latest Image
 
 on:
   workflow_dispatch:
   push:
-    branches: 
+    branches:
       - 'master'
     paths:
       - 'release-versions/latest.txt'
@@ -13,7 +13,7 @@ env:
   IMAGE_NAME: youtube-dl
 
 jobs:
-  Push-New-Release-Version-Image:
+  Push-New-Latest-Image:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,14 +34,7 @@ jobs:
           sed -i -E 's!(python.*install yt-dlp)!\1=='"$RELEASE_VERSION"'!i' Dockerfile
 
       - name: Set tag
-        run: |
-          IMAGE_TAG=$(cat release-versions/latest.txt)
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-
-      - name: Remove updater
-        run: |
-          rm --verbose root/app/youtube-dl/updater.sh
-          rm --verbose -r root/etc/services.d/updater/
+        run: echo "IMAGE_TAG=latest" >> $GITHUB_ENV
 
       - name: Print image tag
         run: |
@@ -61,4 +54,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:v${{ env.IMAGE_TAG }}
+          tags: ${{ env.IMAGE_REPO }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
