Fixed updater, adjusted default args

--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -8,7 +8,7 @@
 --geo-bypass
 
 ## Video Selection
---playlist-end '8'
+--playlist-end '16'
 --match-filter '!is_live'
 
 ## Download Options
@@ -22,6 +22,9 @@
 
 ## Verbosity / Simulation Options
 --no-progress
+
+## Workarounds
+--sleep-requests '1'
 
 ## Video Format Options
 --merge-output-format 'mp4'
