--- a/.github/workflows/push-unstable-image.yml
+++ b/.github/workflows/push-unstable-image.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Set version
         run: |
           RELEASE_VERSION=$(cat release-versions/latest.txt)
-          sed -i -E 's!(python.*install yt-dlp)!\1=='"$RELEASE_VERSION"'!i' Dockerfile
+          sed -i -E 's!(python.*install yt-dlp\[default\])!\1=='"$RELEASE_VERSION"'!i' Dockerfile
 
       - name: Set tag
         run: |
