Fix missing new default args in readme, single quotes

--- a/root/config.default/args.conf
+++ b/root/config.default/args.conf
@@ -23,7 +23,7 @@
 ## Verbosity / Simulation Options
 --ignore-no-formats-error
 --newline
---progress-delta 10
+--progress-delta '10'
 
 ## Workarounds
 --sleep-requests '1'
