Bugfix: env UMASK (fixes #112)
Reimplement UMASK env after it was missed in change to supervisord system (eb7ac7b)

--- a/root/etc/supervisor/conf.d/youtube-dl-webui.conf
+++ b/root/etc/supervisor/conf.d/youtube-dl-webui.conf
@@ -1,6 +1,7 @@
 [program:youtube-dl-webui]
 command=uvicorn --app-dir /app/youtube-dl-webui youtube-dl-webui:webserver --host 0.0.0.0 --port %(ENV_youtubedl_webuiport)s
 user=abc
+umask=%(ENV_UMASK)s
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/youtube-dl-webui/youtube-dl-webui.log
