--- a/root/etc/supervisor/conf.d/youtube-dl.conf
+++ b/root/etc/supervisor/conf.d/youtube-dl.conf
@@ -1,6 +1,7 @@
 [program:youtube-dl]
 command=bash -c "/app/youtube-dl/youtube-dl.sh 2>&1 | tee /var/log/youtube-dl/youtube-dl.log"
 user=abc
+umask=%(ENV_UMASK)s
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
